# examples

java-tutorial/: BUILD  MODULE.bazel  WORKSPACE
java-tutorial/src/main/java/com/example/: Greeting.java
java-tutorial/test/main/java/com/example/: BUILD  GreetingTest.java
